# ai-text-adventure-game

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURSOR_PRO_MASTER_PROMPT.md  Dockerfile  FINAL_COMPLETION_REPORT.md  OFFLINE_POSSESSION_COMPLETE.md  OFFLINE_POSSESSION_SUMMARY.md  P1-1_CHARACTER_CREATION_UI_REPORT.md  P1-3_PLAYER_INTERFACE_REPORT.md  P1-4_DATABASE_SETUP_REPORT.md  P2-6_PLAYER_PROFILE_REPORT.md  P2-7_TRAIT_EFFECTS_FIX_REPORT.md  P2-7_TRAIT_EFFECTS_REPORT.md  P2-8_SNAPSHOT_PREVIEW_REPORT.md  P2-9_POSSESSION_HISTORY_REPORT.md  P2_TASKS_COMPLETION_REPORT.md  P3_PERFORMANCE_OPTIMIZATION_REPORT.md  P3_UI_UX_IMPROVEMENT_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_TODO.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_EN.md  TEST_REPORT_CHARACTER_POSSESSION.md  TODAY_CHANGES_SUMMARY.md  TODO.md  TOKEN_OPTIMIZATION_GUIDE.md  UI_UX_IMPROVEMENT_GUIDE.md  docker-compose.yml  monitor_tokens.py  performance_analysis_report.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.bat  (+20 more)
core/: __init__.py  config.py  exceptions.py  i18n.py  io_encoding.py  logger.py  narrative_language.py  ports.py
database/: __init__.py  possession_db.py
docs/: API.md  ARCHITECTURE_POLICY.md  CUSTOM_WORLD.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION_REPORT.md  I18N.md  POSTGRESQL_QUICKSTART.md  POSTGRESQL_SETUP_GUIDE.md  STORY_VERSIONING.md  TUTORIAL_CN.md
engine/: __init__.py  ai_dialogue.py  batch_query.py  companion_gen.py  companion_narrative.py  dynamic_npc_gen.py  enhancement_engine.py  (+7 more)
(+95 files in other folders)
