[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-text-adventure-engine"
version = "0.1.0"
description = "AI 驱动文字冒险游戏引擎（本地 Ollama + Streamlit）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["core*", "game*", "engine*", "story*", "utils*", "frontend*"]

[tool.ruff]
line-length = 120
target-version = "py39"
